# Canaan-Lane-email-assistant

./: .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: public.env  public.env.example  secret.env.example
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  INDEX.md  NAVIGATION.md  SETUP.md
scripts/: test_telegram_integration.py  view_db.py
src/: __init__.py  config.py
src/clients/: __init__.py  gmail_client.py  llm_client.py  storage.py  telegram.py
src/models/: __init__.py  email.py
src/utils/: __init__.py  prompts.py  text.py
systemd_template/: README.md  email-assistant.service  email-assistant.timer  install.sh  update.sh
tests/: __init__.py  test_telegram_integration.py
